Main layout laid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
+<!-- Sections -->
 <app-intro></app-intro>
+<app-project-main></app-project-main>
+<app-studies-experiences-main></app-studies-experiences-main>
+<app-skills-main></app-skills-main>
+<app-about-me-main></app-about-me-main>
+<!-- Scroll top button -->
+<app-scroll-top></app-scroll-top>
+
+<!-- Router ? -->
 <router-outlet></router-outlet>
