--- a/src/app/intro/intro-main/intro.component.scss
+++ b/src/app/intro/intro-main/intro.component.scss
@@ -1,7 +1,7 @@
 .main{
 	position: relative;
-	height:100vh;
-	width:100%;
+	/*height:100vh;
+	width:100%;*/
 	top:0;
 	left:0;
 	right:0;
@@ -79,6 +79,7 @@
 				border:1px solid rgba(255, 255, 255, 0.88);
 				border-radius:2px ;
 				cursor: pointer;
+				margin: 5px;
 				padding:10px;
 				box-shadow:0px 0.5px 5px rgba(0, 0, 0, 0.2);
 				transition: 0.1s ease-in-out;
