--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,4 +16,55 @@ body{
 
 section{
 	scroll-snap-align: start;
+	height:100vh;
+	width:100%;
+	padding: 0;
+	margin: 0;
+}
+
+.content{
+	padding: 1vh;
+	.title {
+		height: 7.5vh;
+		.catTitle {
+			height: 3vh;
+			width:100rem;
+			padding: 1rem 2.05rem;
+			padding-right: 1rem;
+
+			span {
+				color:#fff;
+				text-transform: uppercase;
+				letter-spacing: 1.05rem;
+				font-size:3rem;
+				border-top: #fff 1px solid;
+				border-bottom: #fff 1px solid;
+				padding: 10px 3px 7px 3px;
+			}
+			
+		}
+
+		.subCatTitle {
+			height: 2vh;
+			margin-top:2rem;
+			width:100rem;
+			padding: 1rem 2.05rem;
+			padding-right: 1rem;
+
+			span {
+				color:#fff;
+				text-transform: uppercase;
+				letter-spacing: 1.01rem;
+				font-size:1.3rem;
+				border-bottom :1px solid rgba(255, 255, 255, 0.88);
+				padding: 0 20px 10px 2px;
+			}
+		}
+	}
+
+	.inCategory{
+		height: 87vh;
+		padding: 1vh;
+		padding-top: 2vh;
+	}
 }
