update Navbar to Angular component

--- a/src/app/intro/intro-main/intro.component.html
+++ b/src/app/intro/intro-main/intro.component.html
@@ -1,15 +1,7 @@
 <section class="main">
     <app-background class="FirstBackground"></app-background>
     <div class="overlay"></div>
-    <div class="navbar">
-        <div class="logo">Elouan<br>Lerissel</div>
-        <ul>
-            <li><a href="#Portfolio" id="btn_port">Portfolio</a></li>
-            <li><a href="#Styds&Exp" id="btn_st&exp">Studies & Experiences</a></li>
-            <li><a href="#Skills" id="btn_Skill">Skills</a></li>
-            <li><a href="#Abm" id="btn_abm">About me</a></li>
-        </ul>
-    </div>
+    <app-navbar></app-navbar>
     <div class="title">
             <h1 class="head">Welcome to my <span>Portfolio</span></h1>	
             <app-intro-text class="sub"></app-intro-text>
