--- a/src/app/studies-experiences/studies-experiences-main/studies-experiences-main.component.html
+++ b/src/app/studies-experiences/studies-experiences-main/studies-experiences-main.component.html
@@ -5,5 +5,9 @@
         <div class="title">
             <div class="catTitle big" id="Portfolio"><span>Studies & Experiences</span></div>
         </div>
+        <div class="sp-wrapper">
+            <app-studies-list class="module"></app-studies-list>
+            <app-expriences-list class="module"></app-expriences-list>
+        </div>
     </div>
 </section>
