--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!-- Sections -->
-<app-intro></app-intro>
-<app-project-main></app-project-main>
-<app-studies-experiences-main></app-studies-experiences-main>
-<app-skills-main></app-skills-main>
-<app-about-me-main></app-about-me-main>
+<app-intro id='intro'></app-intro>
+<app-project-main id='projects'></app-project-main>
+<app-studies-experiences-main id='exp'></app-studies-experiences-main>
+<app-skills-main id='skill'></app-skills-main>
+<app-about-me-main id='abm'></app-about-me-main>
 <!-- Scroll top button -->
 <app-scroll-top></app-scroll-top>
 
