add the graph and dynamic text box with it

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,8 @@ section{
 .content{
 	padding: 1vh;
 	.title {
-		height: 7.5vh;
+		margin-top: 1vh;
+		height: auto;
 		.catTitle {
 			height: 3vh;
 			width:100rem;
