--- a/src/app/skills/skills-main/skills-main.component.html
+++ b/src/app/skills/skills-main/skills-main.component.html
@@ -6,5 +6,27 @@
             <div class="catTitle" id="Portfolio"><span>Skills</span></div>
             <div class="subCatTitle"><span>Develop throught my studies or personal projects</span></div>
         </div>
+        <!-- Content -->
+        <!-- content for this part -->
+        <div class="inCategory">
+            <div class="skills_content">
+                <div class="in info">
+                    <div class="txt">
+                        <app-display-lang [lang_hover]="lang_hover" [lst_lang]="lst_lang"></app-display-lang>
+                    </div>
+                    <div class="graph">
+                        <app-donut-graph [lst_lang]="lst_lang" (langUpdateEvent)="changeLangHover($event)"></app-donut-graph>
+                    </div>
+                </div>
+                <div class="in elec">
+                    <div class="graph">
+                        <app-donut-graph [lst_lang]="lst_lang" (langUpdateEvent)="changeLangHover($event)"></app-donut-graph>
+                    </div>
+                    <div class="txt">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin molestie iaculis odio, id sagittis turpis sollicitudin id. Nullam eget porta mi. Mauris at enim lorem. Praesent vel commodo leo. Aenean eget nunc tellus. Nullam vehicula tellus vel mauris interdum, nec dapibus urna vulputate. Aliquam et ullamcorper ligula.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
