--- a/src/app/skills/skills-main/skills-main.component.scss
+++ b/src/app/skills/skills-main/skills-main.component.scss
@@ -1,3 +1,55 @@
 section{
     background-color: #5a7b88;
 }
+.skills_content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 83vh;
+    padding: 1vh;
+    margin-top: 0vh;
+      
+  
+    .in{
+      display: flex;
+      flex-direction: row;
+      gap : 1.5rem;
+  
+      &.info{
+        height: 50%;
+  
+        .txt{
+          border-color: #50685f;
+          width: 75%;
+        }
+      }
+  
+      &.elec{
+        height:50%;
+  
+        .txt{
+          border-color: #97afa7;
+        }
+      }
+      
+      .txt{
+        width: 75%;
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+        border: 3px;
+        padding: 3%;
+        border-style: solid;
+        border-color: #586074;
+        border-radius: 30px;
+      }
+  
+      .graph{
+        width: 25%;
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+  
