--- a/src/app/skills/skills-main/skills-main.component.html
+++ b/src/app/skills/skills-main/skills-main.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <!-- Skills -->
 <section id="Skills" class="background" style="background-color: #5a7b88">
     <div class="content">
@@ -14,6 +15,9 @@
                     <div class="txt">
                         <app-display-lang [lang_hover]="lang_hover" [lst_lang]="lst_lang"></app-display-lang>
                     </div>
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
                     <div class="graph">
                         <app-donut-graph [lst_lang]="lst_lang" (langUpdateEvent)="changeLangHover($event)"></app-donut-graph>
                     </div>
@@ -21,6 +25,9 @@
                 <div class="in elec">
                     <div class="graph">
                         <app-donut-graph [lst_lang]="lst_lang" (langUpdateEvent)="changeLangHover($event)"></app-donut-graph>
+                    </div>
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-right"></i>
                     </div>
                     <div class="txt">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin molestie iaculis odio, id sagittis turpis sollicitudin id. Nullam eget porta mi. Mauris at enim lorem. Praesent vel commodo leo. Aenean eget nunc tellus. Nullam vehicula tellus vel mauris interdum, nec dapibus urna vulputate. Aliquam et ullamcorper ligula.
