--- a/src/app/studies-experiences/expriences-list/expriences-list.component.scss
+++ b/src/app/studies-experiences/expriences-list/expriences-list.component.scss
@@ -2,6 +2,9 @@
     padding: 8px;
     transition: 0.2s;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .sp-box {
         --main-color-card: #969eb0;
@@ -45,5 +48,19 @@
                 color: var(--main-color);
             }
         }
+    }
+
+    .button{
+        background:rgba(0, 0, 0, 0.1);
+        text-align: center;
+        border-radius: 4px;
+        width: 50%;
+        font-family: FontAwesome;
+        font-weight: normal;
+        font-style: normal;
+        font-size: 5rem;
+        line-height: 50px;
+        color: #fff; 
+        align-self: center;
     }
 }
