add bliking and a litlle bit of text

--- a/src/app/skills/skills-main/skills-main.component.html
+++ b/src/app/skills/skills-main/skills-main.component.html
@@ -16,6 +16,7 @@
                         <app-display-lang [lang_hover]="lang_hover" [lst_lang]="lst_lang"></app-display-lang>
                     </div>
                     <div class="arrow">
+                        <div class="text">Hover on the graph to see more details</div>
                         <i class="fa-solid fa-arrow-left"></i>
                     </div>
                     <div class="graph">
