--- a/src/app/projects/project-main/project-main.component.scss
+++ b/src/app/projects/project-main/project-main.component.scss
@@ -1,3 +1,8 @@
 section{
     background-color: #8f82a5;
 }
+.inCategory{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
