--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,6 @@ section{
 		padding-top: 2vh;
 	}
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
