Add github component

--- a/src/app/projects/project-main/project-main.component.html
+++ b/src/app/projects/project-main/project-main.component.html
@@ -8,7 +8,7 @@
         </div>
         <!-- Github Module -->
         <div class="inCategory">
-
+            <app-github-embeded></app-github-embeded>
         </div>
     </div>
 </section>
