--- a/src/app/intro/intro-main/intro.component.html
+++ b/src/app/intro/intro-main/intro.component.html
@@ -6,4 +6,5 @@
             <h1 class="head">Welcome to my <span>Portfolio</span></h1>	
             <app-intro-text class="sub"></app-intro-text>
     </div>
+    <app-popup-wip></app-popup-wip>
 </section>
