Minor changes and add a single variable for the URL of the backend

--- a/src/app/about-me/about-me-main/about-me-main.component.html
+++ b/src/app/about-me/about-me-main/about-me-main.component.html
@@ -5,5 +5,8 @@
             <div class="catTitle" id="Portfolio"><span>About Me</span></div>
             <div class="subCatTitle"><span>Who am I ?</span></div>
         </div>
+        <!-- content for this part -->
+        <div class="inCategory">
+        </div>
     </div>
 </section>
