--- a/src/app/projects/github-embeded/github-embeded.component.scss
+++ b/src/app/projects/github-embeded/github-embeded.component.scss
@@ -35,6 +35,23 @@
     transition: .5s;
     transform: scale(1);
 
+    //animations
+	animation-name: fade-in;
+	animation-fill-mode: both;
+	animation-duration: .5s;
+
+    $animationDelay: 0.01s;
+    @for $i from 1 through 15 {
+        &:nth-of-type(#{$i}) {
+            animation-delay: #{0.05+($i)/30}s;
+        }
+    }
+
+    @keyframes fade-in {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+    }
+
     &::before{
         position: absolute;
         content: '';
@@ -56,7 +73,7 @@
     }
 
     &:hover{
-        transform: scale(1.1) rotate(2deg);
+        transform: scale(1.05) rotate(1deg);
     }
 }
 
@@ -74,30 +91,30 @@
     align-items: center;
     color: #565656;
     max-width: 13.52em;
-}
 
-.info h2{
-    font-size: 1.5em;
-}
+    h2{
+        font-size: 1.5em;
+    }
 
-.info h3{
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    overflow: hidden;
-    transition: .5s;
-    max-width: 156px;
-}
+    h3{
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        overflow: hidden;
+        transition: .5s;
+        max-width: 156px;
 
-.info a{
-    text-decoration: none;
-    color: #565656;
-}
+        &:hover{
+            letter-spacing: .05em;
+        }
+    }
 
-.info h3:hover{
-    letter-spacing: .05em;
+    a{
+        text-decoration: none;
+        color: #565656;
+    }
 }
 
 .user_img{
@@ -127,13 +144,13 @@
     height: 6.70em;
     padding: 1.17em 1.76em 1.17em 1.76em;
     color: #373737;
-}
 
-.description p{
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    p{
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
 }
 
 .tag{
@@ -146,14 +163,14 @@
     padding: 0.58em 1.76em 0.58em 1.76em;
     min-height: 2.64em;
 
-}
+    span{
+        background-color: #828385;
+        color: #efefef;
+        margin-right: 0.58em;
+        padding: 0.17em 0.41em;
+        border-radius: 0.29em;
+    }
 
-.tag span{
-    background-color: #828385;
-    color: #efefef;
-    margin-right: 0.58em;
-    padding: 0.17em 0.41em;
-    border-radius: 0.29em;
 }
 
 .stats{
@@ -187,24 +204,26 @@
     }   
 }
 
-.stat svg{
-    position: relative;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    width: 1.17em;
-    margin: 0.58em;
-}
-
 .stat{
     position: relative;
     display: grid;
     margin: 1.17em;
     text-align: center;
-}
 
-.stat:hover span{
-    display: grid;
+    svg{
+        position: relative;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        width: 1.17em;
+        margin: 0.58em;
+    }
+
+    &:hover {
+        span{
+            display: grid;
+        }
+    }
 }
 
 .language{
@@ -213,6 +232,33 @@
     height: 23.5em;
     width: 0.58em;
     right: 0;
+
+    li {
+        transition: .5s;
+        position: relative;
+
+        &:hover{
+            margin-left: -0.58em;
+            border-radius: 0.58em 0em 0em 0.58em;
+
+            &::after{
+                opacity: 1;
+                content: attr(data-before);
+                display: flex;
+                position:fixed;
+                width: fit-content;
+                height: 1.76em;
+                background-color: #c1c1c1;
+                z-index: 2;
+                text-align: center;
+                transform: translateX(2.05em);
+                border-radius: 0.29em;
+                text-align: center;
+                align-items: center;
+                padding: 0.29em 0.58em;
+            }
+        }
+    }
 }
 
 .lang{
@@ -221,29 +267,24 @@
     z-index: 1;
 }
 
-li{
-    transition: .5s;
-    position: relative;
-}
 
-.language li:hover{
-    margin-left: -0.58em;
-    border-radius: 0.58em 0em 0em 0.58em;
-}
+.button{
+    background:rgba(0, 0, 0, 0);
+    text-align: center;
+    border: 0px;
+    border-radius: 0px;
+    width: 50%;
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 5rem;
+    line-height: 50px;
+    color: #fff; 
+    align-self: center;
 
-li:hover::after{
-    opacity: 1;
-    content: attr(data-before);
-    display: flex;
-    position:fixed;
-    width: fit-content;
-    height: 1.76em;
-    background-color: #c1c1c1;
-    z-index: 2;
-    text-align: center;
-    transform: translateX(2.05em);
-    border-radius: 0.29em;
-    text-align: center;
-    align-items: center;
-    padding: 0.29em 0.58em;
+    //Size up when hover
+    transition: all .2s ease-in-out;
+    &:hover{
+        transform: scale(1.4); 
+    }
 }
