--- a/src/app/studies-experiences/expriences-list/expriences-list.component.scss
+++ b/src/app/studies-experiences/expriences-list/expriences-list.component.scss
@@ -12,6 +12,16 @@
         padding: 16px;
         margin: 10px;
         background-color: var(--main-color-card);
+
+        //Animation
+        animation-name: fade-in;
+        animation-fill-mode: both;
+        animation-duration: 1.5s;
+        
+        @keyframes fade-in {
+          0% { opacity: 0; }
+          100% { opacity: 1; }
+        }
         
         .sp-box-header {
             --main-color : #f5f5f5;
@@ -62,5 +72,13 @@
         line-height: 50px;
         color: #fff; 
         align-self: center;
+
+        //Size up when hover
+        transition: all .2s ease-in-out;
+        &:hover{
+            transform: scale(1.2); 
+        }
     }
 }
+
+
