--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 <app-about-me-main id='abm'></app-about-me-main>
 <!-- Scroll top button -->
 <app-scroll-top></app-scroll-top>
-
+<!--app-popup-wip></app-popup-wip-->
 <!-- Router ? -->
 <router-outlet></router-outlet>
