--- a/src/app/about-me/about-me-main/about-me-main.component.html
+++ b/src/app/about-me/about-me-main/about-me-main.component.html
@@ -7,6 +7,12 @@
         </div>
         <!-- content for this part -->
         <div class="inCategory">
+            <app-eseo-info></app-eseo-info>
+            <div class="contact">
+                <h1>Contact</h1>
+                <p href="tel:+33635412508">tel : +33 6 35 41 25 08</p>
+                <p>mail : elouan.lerissel@reseau.eseo.fr</p>
+            </div>
         </div>
     </div>
 </section>
