--- a/src/app/studies-experiences/expriences-list/expriences-list.component.scss
+++ b/src/app/studies-experiences/expriences-list/expriences-list.component.scss
@@ -12,6 +12,7 @@
         padding: 16px;
         margin: 10px;
         background-color: var(--main-color-card);
+        filter: drop-shadow(0 3px 6px rgba(0,0,0,0.2));
 
         //Animation
         animation-name: fade-in;
