add the skills tabs component. but need graphical fix

--- a/src/app/project/github-embeded/github-embeded.component.html
+++ b/src/app/project/github-embeded/github-embeded.component.html
@@ -17,7 +17,7 @@
                 <!--//Ropository name-->
             </div>
             <div class="user_img">
-                <img id="profile_picture" src="{{prj.image_link}}" alt="">
+                <img id="profile_picture" src="{{prj.image_link}}" >
                 <!--//Profile picture-->
             </div>
         </div>
