--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -23,12 +23,7 @@
                     </div>
                 </div>
                 <div class="in elec">
-                    <div class="graph">
-                        <app-donut-graph [lst_lang]="lst_lang" (langUpdateEvent)="changeLangHover($event)"></app-donut-graph>
-                    </div>
-                    <div class="txt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin molestie iaculis odio, id sagittis turpis sollicitudin id. Nullam eget porta mi. Mauris at enim lorem. Praesent vel commodo leo. Aenean eget nunc tellus. Nullam vehicula tellus vel mauris interdum, nec dapibus urna vulputate. Aliquam et ullamcorper ligula.
-                    </div>
+                    <app-tabs></app-tabs>
                 </div>
             </div>
         </div>
