--- a/src/app/project/github-embeded/github-embeded.component.scss
+++ b/src/app/project/github-embeded/github-embeded.component.scss
@@ -82,6 +82,17 @@
     display: flex;
     width: 19.41em;
     height: fit-content;
+
+    .user_img{
+        background-color: transparent;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 40%;
+            background-color: transparent;
+        }
+    }
 }
 
 .info{
