Add form at the end Correct lot of styles

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,11 +8,7 @@
         <!-- content for this part -->
         <div class="inCategory">
             <app-eseo-info></app-eseo-info>
-            <div class="contact">
-                <h1>Contact</h1>
-                <p href="tel:+33635412508">tel : +33 6 35 41 25 08</p>
-                <p>mail : elouan.lerissel@reseau.eseo.fr</p>
-            </div>
+            <app-contact-me></app-contact-me>
         </div>
     </div>
 </section>
