--- a/src/app/about-me/eseo-info/eseo-info.component.html
+++ b/src/app/about-me/eseo-info/eseo-info.component.html
@@ -2,10 +2,10 @@
     <div class="txts">
         <div class="title">My school !</div>
         <div class="eseo">
-            <span class="red">e</span>
-            <span class="blue">s</span>
-            <span class="blue">e</span>
-            <span class="blue">o</span>
+            <div class="letter red">e</div>
+            <div class="letter blue">s</div>
+            <div class="letter blue">e</div>
+            <div class="letter blue">o</div>
         </div>
         <div class="acronyme">École Supérieur d'Électronique de l'Ouest</div>
         <div class="location"><span>located in :</span> Angers, FR </div>
