--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,60 +1,43 @@
 section{
     background-color: #5a7b88;
 }
+
 .skills_content{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    height: 83vh;
-    padding: 1vh;
-    margin-top: 0vh;
+    align-items: center;
+    margin: 0;
+    z-index: 0;
+    
       
   
-  .in{
+  .info{
     display: flex;
     flex-direction: row;
-    gap : 1.5rem;
+    justify-content: space-around;
+    align-items: center;
+    height: 50%;
+    width: 100%;
     filter: drop-shadow(0 3px 6px rgba(0,0,0,0.2));
 
-
-    &.info{
-      height: 50%;
-
-      .txt{
-        border-color: #50685f;
-        background-color: #50685f;
-      }
-    }
-
-    &.elec{
-      height:50%;
-
-      .txt{
-        border-color: #97afa7;
-        background-color: #97afa7;
-      }
-    }
-    
     .txt{
+      border-color: #50685f;
+      background-color: #50685f;
+      height: 25rem;
       width: 50%;
       font-size: 1.8rem;
       font-weight: 600;
-      margin-bottom: 1rem;
       border: 3px;
       padding: 3%;
-      border-style: solid;
       border-radius: 30px;
+
     }
 
-    .arrow{
-      text-align: center;
-      width: 25%;
-      font-family: FontAwesome;
-      font-weight: normal;
-      font-style: normal;
-      font-size: 30em;
-      line-height: -55px;
-      color: rgb(143, 76, 76);
+    .graph{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transform: scale(0.9);
 
       .text{
         font-family: 'Roboto', sans-serif;
@@ -67,13 +50,24 @@ section{
         padding: 3%;
         border-style: solid;
       }
-    }
 
-    .graph{
-      width: 25%;
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
+      .app-donut-graph{
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  .elec{
+    display: flex;
+    align-items: center;
+    z-index: 100;
+    margin-top: -4%;
+    
+    app-tabs{
+      width: fit-content;
+      height: fit-content;
     }
   }
 }
