--- a/src/app/studies-experiences/studies-experiences.component.html
+++ b/src/app/studies-experiences/studies-experiences.component.html
@@ -2,12 +2,12 @@
 <section id="Styds&Exp">
     <div class="content">
         <!-- Title -->
-        <div class="title">
-            <div class="catTitle big" id="Portfolio"><span>Studies & Experiences</span></div>
-        </div>
-        <div class="sp-wrapper">
+        <div class="left">
+            <div class="title">
+                <div class="catTitle big"><span>Studies & Experiences</span></div>
+            </div>
             <app-studies-list class="module"></app-studies-list>
-            <app-expriences-list class="module"></app-expriences-list>
         </div>
+        <app-expriences-list class="module"></app-expriences-list>
     </div>
 </section>
