--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -7,15 +7,13 @@ section{
     height: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     app-eseo-info {
         width: 50%;
     }
     
-    .contact{
+    app-contact-me{
         width: 50%;
-        text-align: center;
-        
-        
     }
 }
