--- a/src/app/about-me/eseo-info/eseo-info.component.scss
+++ b/src/app/about-me/eseo-info/eseo-info.component.scss
@@ -19,16 +19,40 @@
         }
 
         .eseo {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 0.5rem;
+            height: 5rem;
             font-size: 5rem;
             font-weight: 900;
             color: transparent;
             font-family: Arial ,sans-serif;
+            margin-top: 0.5rem;
+        
+            .letter{
+                transition: 0.5s;
+                
+                &:hover{
+                    transform: scale(2.5);
+                    margin: 0% 5%;
+                }
 
-            span:hover{
-                font-size: 10rem;
+                &.blue{
+                    background-image: linear-gradient(0.20turn, #4478ba,#4ea7de);
+                    -webkit-background-clip: text;
+                    -moz-background-clip: text;
+                    background-clip: text;
+                }
+                &.red{
+                    background-image: linear-gradient(0.20turn,#91104f, #e14d31) !important;
+                    -webkit-background-clip: text;
+                    -moz-background-clip: text;
+                    background-clip: text;
+                }
             }
 
-            .blue{
+            /*.blue{
                 background-image: linear-gradient(0.20turn, #4478ba,#4ea7de);
                 -webkit-background-clip: text;
                 -moz-background-clip: text;
@@ -39,7 +63,7 @@
                 -webkit-background-clip: text;
                 -moz-background-clip: text;
                 background-clip: text;
-            }
+            }*/
         }
 
         .acronyme{
@@ -66,7 +90,13 @@
             filter: drop-shadow(0 3px 6px rgba(0,0,0,0.2));
             margin: 1rem;
             width: 80%;
-            height: 250px;
+            height: 220px;
+
+            transition: 0.5s;
+
+            &:hover{
+                transform: scale(1.05);
+            }
         }
     }
 
