--- a/src/app/studies-experiences/expriences-list/expriences-list.component.scss
+++ b/src/app/studies-experiences/expriences-list/expriences-list.component.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-height: 100vh;
 
     .sp-box {
         --main-color-card: #969eb0;
@@ -73,6 +74,8 @@
         line-height: 50px;
         color: #fff; 
         align-self: center;
+
+        cursor: pointer;
 
         //Size up when hover
         transition: all .2s ease-in-out;
