Change the studies and experiences section

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -9,6 +9,7 @@
         <!-- Github Module -->
         <div class="inCategory">
             <app-github-embeded></app-github-embeded>
+            <p>Data automatically updated from Github each morning</p>
         </div>
     </div>
 </section>
