--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -3,6 +3,7 @@ section{
 }
 .inCategory{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
