--- a/src/app/studies-experiences/studies-experiences.component.scss
+++ b/src/app/studies-experiences/studies-experiences.component.scss
@@ -1,28 +1,109 @@
 section{
     background-color: #757f97;
+    padding: 0;
 }
 
 .content{
-
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: row;
-    
-    .left{
-        .title{
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    .title{
+        padding-top: 2rem;
+        max-width: 50vw;
+
+        .catTitle{
+            margin: 0;
             max-width: 50vw;
-    
-            .catTitle{
-                margin: 0;
-                max-width: 50vw;
+        }
+    }
+    .all{
+        flex: 1;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .svgContainer{
+            margin-right: 1rem;
+        }
+        .list{
+            display: flex;
+            flex-direction: column;
+            gap: 6rem;
+            
+            .item{
+                background-color: #586074;
+                padding: 5%;
+                border-radius: 15px;
+                cursor: pointer;
+                transition: transform 0.2s;
+                filter: drop-shadow(0 3px 6px rgba(0,0,0,0.2));
+
+                &:hover{
+                    transform: scale(1.05);
+                }
+
+                .title{
+                    font-size: 2rem;
+                    font-weight: 600;
+                    margin: 0;
+                }
+
             }
         }
 
+        .text{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            background-color: #586074;
+            margin: 5%;
+            padding: 2%;
+            border: 10px solid #757f9761;
+            width: 60%;
+            height: 50%;
+            border-radius: 30px;
+            gap: 3rem;
+
+            .title{
+                font-size: 4rem;
+                font-weight: 600;
+                margin: 0;
+                width: fit-content;
+                padding: 1rem;
+                border-bottom: 2px solid #fff;
+            }
+            .subtitle{
+                font-size: 3rem;
+                font-weight: 400;
+                margin: 0;
+            }
+            .subsubtitle{
+                display: flex;
+                flex-direction: row;
+                gap: 5rem;
+
+                .place{
+                    font-size: 2rem;
+                    font-weight: 400;
+                    margin: 0;
+                }
+                .date{
+                    font-size: 1.5rem;
+                    font-weight: 400;
+                    margin: 0;
+                }
+
+            }
+            .description{
+                font-size: 3rem;
+                font-weight: 400;
+                margin: 0;
+            }
+        }
     }
     
-
-    .module{
-        width: 50%;
-        margin: 0 10px 0 10px;
-    }
-
 }
+
+
